Fixed Image Overlapping Issue

--- a/onelive/archive/style.css
+++ b/onelive/archive/style.css
@@ -1,3 +1,7 @@
+.topic2{
+    font-size: 50px !important;
+}
+
 .youtube-videos img{
     height: 200px;
     object-fit: cover;
